fix gap

--- a/Test1/assets/style/style.css
+++ b/Test1/assets/style/style.css
@@ -692,6 +692,9 @@ background: #000;
   border: 1px solid #ebebeb;
   border-radius: 10px;
 }
+.customerSay-item .rating{
+  justify-content: center;
+}
 
 .customerSay-item .image-container img {
   width: 70px;
@@ -869,4 +872,6 @@ background: #000;
   font-size: 10px;
 }
 
-
+.disable-scroll {
+  overflow: hidden;
+}
